# birex-final

./: .gitignore  Anchor.toml  package-lock.json  package.json  tsconfig.json
app/: next.config.js  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
app/src/app/api/prices/: route.ts
app/src/components/: AssetDropdown.tsx  AssetSidebar.tsx  Hero.tsx  LiveChart.tsx  MarketTicker.tsx  Navbar.tsx  RecentTrades.tsx  SessionCounter.tsx  TradingPanel.tsx  TradingView.tsx  WalletProvider.tsx
app/src/hooks/: usePrices.ts  useSessionCounter.ts
app/src/idl/: session_counter.json
app/src/lib/: assets.ts
programs/birex-core/: Cargo.toml
programs/birex-core/src/: lib.rs
programs/birex-core/src/routing/: errors.rs  events.rs  mod.rs  pyth.rs  state.rs
programs/birex-core/src/routing/instructions/: initialize.rs  mod.rs  settle_trade.rs  trade.rs
programs/bt-token/: Cargo.toml
programs/bt-token/src/: lib.rs
programs/bt-token/src/routing/: errors.rs  events.rs  math.rs  mod.rs  state.rs
programs/bt-token/src/routing/instructions/: authorized_mint_bt.rs  burn_bt.rs  initialize.rs  mint_bt.rs  mod.rs  set_authorized_minter.rs
programs/session-counter/: Cargo.toml
programs/session-counter/src/: lib.rs
tests/: bt-token-test.ts
