[package]
name = "bt-token"
version = "0.1.0"
description = "BT token mint/burn program on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bt_token"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = "1.0.2"
solana-program = "=4.0.0"
