[package]
name = "session-counter"
version = "0.1.0"
description = "Session-based counter on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "session_counter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
solana-program = "=1.18.17"
